# pypncp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: contributing.md  errors.md  models.md  pagination.md  quickstart.md
docs/resources/: atas.md  contratacoes.md  contratos.md  precos.md  search.md
src/pypncp/: __init__.py  client.py  exceptions.py  models.py
src/pypncp/_internal/: __init__.py  http.py
src/pypncp/resources/: __init__.py  atas.py  base.py  contratacoes.py  contratos.py  precos.py  search.py
tests/: test_atas_resource.py  test_client.py  test_contratacoes_resource.py  test_contratos_resource.py  test_exceptions.py  test_http_client.py  test_models.py  test_precos_resource.py  test_search_resource.py
